--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -7,3 +7,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
+
+#MYBATIS
+mybatis.mapper-locations=classpath:mapper/**/**.xml
