--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,3 +8,59 @@ spring.datasource.password=1234
 
 #MYBATIS
 mybatis.mapper-locations=classpath:mapper/**/**.xml
+
+## JPA Setting ##
+# DB 스키마 자동 동기화 : create, create-drop, validate, update, none
+spring.jpa.hibernate.ddl-auto=update
+
+# JPA 표준 기능으로 DDL 생성 시도할지 말지 정도의 의미 : 보통 hibernate에서 담당하기 때문에 기본 false
+spring.jpa.generate-ddl=false
+
+# JPA나 hibernate를 통해 CRUD를 실행하면 해당 CRUD의 SQL 로깅을 보여줄지에 대한 유무
+spring.jpa.show-sql=true
+
+# 사용하는 데이터베이스를 지정
+spring.jpa.database=mysql
+
+# 사용하려는 데이터베이스에 맞는 Dialect 지정(hibernate가 각 데이터베이스에 맞게 SQL을 처리해주기 위해서) : 버전이 올라가면서 Dialect의 버전을 입력 안해줘도 찾아감
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# 하이버네이트 전용 속성 : 로깅에 표시되는 SQL을 보기 좋게 바꿔주는 기능
+spring.jpa.properties.hibernate.format_sql=true
+
+# 하이버네이트 전용 속성 : 여러 연관 엔티티를 IN 쿼리로 묶어 조회하여 N+1 문제 완화(Lazy 로딩시 사용)
+# N + M 문제 해결하는 방법
+spring.jpa.properties.hibernate.default_batch_fetch_size=500
+
+# hibernate logging level 설정 -> info, debug가 있는데 debug가 좀 더 자세히 보여준다.
+logging.level.org.hibernate.SQL=info
+
+# hibernate logging type 설정 -> trace로 설정 해놓으면 로깅에 ?에 해당하는 데이터를 따로 출력해준다.
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# Hibernate Database Info 로그 레벨 설정
+# - org.hibernate.orm.connections.pooling 패키지의 로그를 WARN으로 설정
+# - HHH10001005: Database info 로그(INFO) 출력 방지
+# - 커넥션 풀 초기화 시 Hibernate가 DB/드라이버 정보를 찍는 로그를 숨김
+# - 실제 DB 연결과 CRUD에는 전혀 영향 없음
+logging.level.org.hibernate.orm.connections.pooling=WARN
+
+# OSIV[Open Session In View) : true가 default
+# OSIV를 끄면(false) 모든 지연로딩을 트랜잭션 안에서 처리해줘야 한다.
+# OSIV가 false로 설정되어 있으면 세션이 서비스단에서 종료가 되기 때문에 컨트롤러단에서 LAZY로 잡혀있는 객체를 호출을 못한다.(컨트롤러에서 sysout찍어놓으면 에러나는 이유임)
+# OSIV가 true라는 뜻은 view단까지 세션을 open한다는 뜻. 원래 false면 세션이 서비스단이 종료될 때 끝나지만 true이면 컨트롤러 단에서 View 렌더링까지 유지된다.
+spring.jpa.open-in-view=true
+
+# HTML form에서 PUT, DELETE 요청을 허용하기 위한 hidden method filter 활성화(기본 : 폼태그는 action에 get/post 방식만 사용함)
+spring.mvc.hiddenmethod.filter.enabled=true
+
+# 업로드 파일 용량 설정(default=1048576 Byte = 약 1MB)
+spring.servlet.multipart.max-file-size=500MB
+
+# 스프링부트 3버전 이상부터(중요)
+# 요청 경로를 ControllerHandler에 매칭시키기 위한 전략의 기본 값
+# spring.mvc.pathmatch.matching-strategy 기본 값이 ant_path_matcher 에서 path_pattern_parser 로 변경됨
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# 컬럼 생성시 카멜케이스 형태로 안만들고 언더바 붙여서 만들어 주는거 방지(2025-02-04)
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
